--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/index.css">
 
 </head>
@@ -26,7 +27,16 @@
     <div class="carousel"></div>
     <!-- INTRO -->
     <div class="intro">
-        <p class="intro__text">Tại <SPAN>KLK PHUC THINH</SPAN> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus maiores, cum exercitationem nemo nostrum harum, ab quia asperiores est consequatur deleniti qui nulla voluptatibus odit sequi voluptates officia fuga beatae nobis eius corporis mollitia amet illo. Porro aut, laudantium minus inventore expedita, quos sunt dolore deleniti modi ipsam, dolor libero ducimus laboriosam necessitatibus neque amet at ipsum debitis mollitia cumque est accusantium suscipit vel ab. Delectus doloribus, possimus recusandae, deserunt adipisci cumque est excepturi quos, optio a nisi maxime harum quod. Quia nemo esse modi sapiente accusantium optio quis obcaecati qui dolores vitae ad quae architecto, expedita maxime explicabo molestiae laboriosam natus culpa ut porro aliquam voluptatem id! Blanditiis, consequatur quis. Id unde cum ea fugiat ipsum, tenetur laboriosam doloribus porro aliquam cumque in ipsa itaque error totam accusamus sapiente soluta assumenda nam nulla.</p>
+        <p class="intro__text">Tại <SPAN>KLK PHUC THINH</SPAN> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Repellendus maiores, cum exercitationem nemo nostrum harum, ab quia asperiores est consequatur deleniti qui
+            nulla voluptatibus odit sequi voluptates officia fuga beatae nobis eius corporis mollitia amet illo. Porro
+            aut, laudantium minus inventore expedita, quos sunt dolore deleniti modi ipsam, dolor libero ducimus
+            laboriosam necessitatibus neque amet at ipsum debitis mollitia cumque est accusantium suscipit vel ab.
+            Delectus doloribus, possimus recusandae, deserunt adipisci cumque est excepturi quos, optio a nisi maxime
+            harum quod. Quia nemo esse modi sapiente accusantium optio quis obcaecati qui dolores vitae ad quae
+            architecto, expedita maxime explicabo molestiae laboriosam natus culpa ut porro aliquam voluptatem id!
+            Blanditiis, consequatur quis. Id unde cum ea fugiat ipsum, tenetur laboriosam doloribus porro aliquam cumque
+            in ipsa itaque error totam accusamus sapiente soluta assumenda nam nulla.</p>
         <div class="intro__content">
             <div class="intro__left">
                 <div class="intro__item intro__smallItem">
@@ -94,11 +104,39 @@
         </div>
 
     </div>
-    <!-- Hello -->
     <!-- SERVICES -->
-    <div class="services"></div>
+    <div class="services">
+        <div class="services__content">
+            <div class="services__item">
+                <i class="fa fa-home"></i>
+                <h2>Dịch vụ bảo hành</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos blanditiis consectetur at reprehenderit
+                    modi distinctio.</p>
+            </div>
+
+            <div class="services__item">
+                <i class="fa fa-pencil-alt"></i>
+                <h2>Thiết kế nội thất</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos blanditiis consectetur at reprehenderit
+                    modi distinctio.</p>
+            </div>
+            <div class="services__item">
+                <i class="fa fa-user"></i>
+                <h2>Đội ngũ nhân lực</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos blanditiis consectetur at reprehenderit
+                    modi distinctio.</p>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
     <!-- FOOTER -->
-    <div class="footer"></div>
+    <div class="footer">
+        <h2>Interior Design</h2>
+        <p>Địa chỉ: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, maxime!</p>
+        <p>Điện thoai: 0932.032.323
+        </p>
+        <p>Điện thoại: 032(2)23 2323 311</p>
+    </div>
 
 </body>
 
